client/src/scss/app.scss
/* ... */
@mixin flexColumn {
	display: flex;
	flex-direction: column;
}

@mixin bigTitle {
    width: 820px;
    padding: 0.2em;
	text-align: center;
    //display: flex;
    //justify-content: center;
    position: relative;
    color: #000000;
    font-size: 2em;
    font-weight: 400;
    line-height: 1.2em;
	font-size: 3em;
}

@mixin bigPinkTitle {
	@include bigTitle;
	font-family: cursive;
	font-weight: bold;
}

@mixin bigBlueTitle {
	@include bigTitle;
	font-family: 'Sigmar One', sans-serif;
}

@mixin entryUserTitle {

	font-weight: 600;
	display: flex;
	align-items: center;
	margin-bottom: 0.5em;
	font-size: 1.1em;

	.text.link {
		font-weight: inherit;
		color: #5c5eff;
		text-decoration: underline;
		cursor: pointer;
	}

	> i {
		margin-right: 0.3em;
	}

}

@mixin paperBackground($opacity: 0.3) {
	&::before {
		content: '';
		background-image: url(static/entry-bg-pattern.jpg);
		position: absolute;
		top: 0;
		right: 0;
		bottom: 0;
		left: 0;
		opacity: $opacity;
	}
}

@mixin day {
	position: relative;
	flex-shrink: 0;

	width: 700px;
	margin-bottom: $entrySpacing;
	padding: 10px;
	padding: 0.5em 1em;

	background-color: white;
	border-bottom: 1px solid rgb(209, 209, 209);
	border-right: 1px solid rgb(236, 236, 236);
	border-top: 1px solid rgb(246, 246, 246);
	border-left: 8px solid #ef00ff;

	@include paperBackground(0.6);

	&.completed {
		background-color: #848484;
		// quick hack to make entries within completed days non editable:
		.entry {
			pointer-events: none;
			.text.link {
				color: black !important;
				text-decoration: none !important;
			}
		}
	}

	> .title {
		@include entryUserTitle;
		position: relative;
		font-size: 2em;
		font-weight: 500;
		margin-bottom: 0em; // because markdown desc will have margin-top 0.5em
		justify-content: space-between //move "completed" button to the right
	}

	> .description {
		position: relative;
	}
}

@mixin entry {
	position: relative;
	flex-shrink: 0;

	width: 660px;
	margin-bottom: $entrySpacing;
	padding: 10px;
	padding: 0.5em 1em;

	background-color: white;
	border-bottom: 1px solid rgb(209, 209, 209);
	border-right: 1px solid rgb(236, 236, 236);
	border-top: 1px solid rgb(246, 246, 246);

	@include paperBackground;

	&.entry-talk {
		border-left: 8px solid #4bb1c1;
	}
	&.entry-project {
		border-left: 8px solid #63c519;
	}

	> .title {
		@include entryUserTitle;
		position: relative;
		margin-bottom: 0em; // because markdown desc will have margin-top 0.5em
	}

	> .description {
		position: relative;
		//avoid hitting duration:
		width: calc(100% - 35px);
	}

	> .user {
		position: relative;
		font-style: italic;
		color: rgb(130, 130, 130);
		font-size:90%;

		//avoid hitting duration:
		width: calc(100% - 35px);
	}

	> .duration {

		position: absolute;
		bottom: 10px;
		right: -1px;
		padding-right: 10px;
		padding-left: 2px;
		border-right: 1px solid #bdbdbd;
		border-bottom: 1px solid gainsboro;
		display: flex;
		align-self: flex-end;
		width: 32px;
		height: 32px;
		background-color: #6671c1;
		color: #ffffff;
		align-items: center;
		justify-content: center;
		font-weight: bold;

	}
}

@mixin user {

	width: 500px;
	margin-bottom: $entrySpacing;
	padding: 10px;
	padding: 0.5em 1em;
	position: relative;
	flex-shrink: 0;

	@include paperBackground;

	&:first-child {
		margin-top: 1.5em;
	}

	&.user-admin {
		border-left: 8px solid $adminOrange;
	}
	&.user-normal {
		border-left: 8px solid #8c9ca5
	}

	border-bottom: 1px solid rgb(209, 209, 209);
	border-right: 1px solid rgb(248, 248, 248);
	border-top: 1px solid rgb(248, 248, 248);

	> .title {
		@include entryUserTitle;
	}

	> .type {
		font-style: italic;
		color: rgb(130, 130, 130);
		font-size:90%;
	}

	> .is-new {
		position: absolute;
		bottom: 5px;
		right: 5px;
		height: 32px;
		width: 32px;
		font-size:0.75em;
		background-color: #ffd18c;
		border-radius: 100px;
		display: flex;
		align-items: center;
		justify-content: center;
		color: #5a3c00;
		font-weight: bold;
		border: 1px solid #ffbc00;
	}
}
/* ... */

